[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/scenes/components/decay_play_area.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/components/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/assets/art/general/playarea_sample.png" type="Texture" id=3]

[node name="DecayPlayArea" type="Node2D"]
script = ExtResource( 1 )

[node name="DecayPlayAreaSkeleton" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Button_Decay1" parent="." instance=ExtResource( 2 )]
position = Vector2( -200, 425 )

[node name="Button_Decay2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 425 )

[node name="Button_Decay3" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 425 )

[connection signal="hit_good" from="Button_Decay1" to="." method="_on_Button_Decay1_hit_good"]
[connection signal="hit_miss" from="Button_Decay1" to="." method="_on_Button_Decay1_hit_miss"]
[connection signal="hit_perfect" from="Button_Decay1" to="." method="_on_Button_Decay1_hit_perfect"]
[connection signal="hit_good" from="Button_Decay2" to="." method="_on_Button_Decay2_hit_good"]
[connection signal="hit_miss" from="Button_Decay2" to="." method="_on_Button_Decay2_hit_miss"]
[connection signal="hit_perfect" from="Button_Decay2" to="." method="_on_Button_Decay2_hit_perfect"]
[connection signal="hit_good" from="Button_Decay3" to="." method="_on_Button_Decay3_hit_good"]
[connection signal="hit_miss" from="Button_Decay3" to="." method="_on_Button_Decay3_hit_miss"]
[connection signal="hit_perfect" from="Button_Decay3" to="." method="_on_Button_Decay3_hit_perfect"]
